--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,8 @@
 <h1>Login</h1>
 <% if (messages.error) { %>
-    <% messages.error %>
+    <%= messages.error %>
 <% } %>
 <form action="/login" method="POST">
-    <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
-    </div>
     <div>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
